--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,2 @@
 #Demo
-This is a demo in order to learn git and Github
+This is a demo in order to learn git and Github by learning from YT videos on Code Camp
